--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = operating-unit
 	url = git@github.com:jarsa/operating-unit.git
 	branch = 15.0
+
+[submodule "transport-management-system"]
+	path = transport-management-system
+	url = git@github.com:jarsa/transport-management-system.git
+	branch = 15.0
